--- a/index.html
+++ b/index.html
@@ -134,8 +134,7 @@
             <img class="area1-image4" src="image/list.png" alt="">
             <p>05</p>
           </div>
-          <img class="area1-image5" src="image/modem.png" alt="">
-          <img class="area1-image6" src="image/rooter.png" alt="">
+          <img class="area1-image5" src="image/iphone.png" alt="">
           <div class="intro-text1 intro-text3"><span class="text1-title">テキスト⑥</span><br> <span class="price1">4,950￥</span>(毎月税込み)</div>
         </ul>
       </div>
