--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
       <img class="logo1" src="image/logo-upper-white.png" alt="">
       <img class="logo2" src="image/logo-lower-white.png" alt="">
     </div>
-    <ul>
+    <!-- <ul>
         <img class="spain-flag colorfilter-image" src="image/spain.png" alt="">
         <img class="japan-flag colorfilter-image" src="image/japan3.png" alt="">
-    </ul>
+    </ul> -->
     <div class="profile-area">
       <div class="profile-text">
         テキスト①：テキストテキストテキスト<span id="emoji1"></span><span id="emoji2"></span><span id="emoji3"></span><br>
@@ -176,19 +176,93 @@
       <p><span class="text-line">テキスト⑧</span></p>
     </div>
     <ul class="follow-me">
-      <li><a class="what-btn" href="https://wa.me/qr/NYXYDLZYQQ3UH1"><span>&emsp;WhatsApp</span></a></li>
+      <li><a class="what-btn" href="https://wa.me/qr/NYXYDLZYQQ3UH1"><span>&emsp;WhatsApp：0 9 0 - 4 0 7 4 - 5 3 3 7</span></a></li>
       <li><a class="tel-btn" href="tel:090-4074-5337">&emsp;TEL：0 9 0 - 4 0 7 4 - 5 3 3 7</a></li>
     </ul>
   </section>
 
+  <section id="area1-1">
+    <div class="area1-1-wrapper">
+      <h2 class="heading1" data-en="1 Gbps"><span>①-1&emsp;1 Gbps</span></h2>
+     <div class="area1-1-upper">
+       <ol class="list_design1">
+         <li>テキスト⑩：テキストテキストテキスト</li>
+         <li>テキスト⑪：テキストテキストテキスト</li>
+         <li>テキスト⑫：テキストテキストテキスト</li>
+       </ol>
+       <div class="area1-1-wifi1">
+         <img src="image/cloud wifi.png" alt="" class="area1-1-wifi2">
+         <img src="image/kira3.png" alt="" class="kira1">
+         <img src="image/kira4.png" alt="" class="kira2">
+         <img src="image/kira6.png" alt="" class="kira3">
+         <img src="image/kira4.png" alt="" class="kira4">
+         <div class="circle"></div>
+         <div class="wifi-text">テキスト⑮</div>
+       </div>
+       <div class="area1-1-gbps1">
+         <img src="image/hikari-2gbps1.png" alt="" class="area1-1-gbps2">
+         <img src="image/kira3.png" alt="" class="kira1">
+         <img src="image/kira4.png" alt="" class="kira2">
+         <img src="image/kira4.png" alt="" class="kira3">
+         <div class="circle"></div>
+         <div class="gbps-text">テキスト⑯</div>
+       </div>
+       <img src="image/mokumoku.png" alt="" class="mokumoku">
+       <div class="point">テキスト⑨</div>
+     </div> 
+      <div class="area1-1-textarea">
+        <span class="area1-1-textarea-title">テキスト⑬</span>
+        <p>テキスト⑭：テキストテキストテキストテキストテキストテキストテキスト
+          <span id="emoji4"></span> テキストテキストテキストテキストテキストテキストテキスト⚡ 
+          テキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+      </div>
+      <div class="video">
+        <iframe width="640" height="360" src="https://www.youtube.com/embed/IA2D3Cl03CU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+  </section>
+
+  <section id="area1-2">
+    <div class="area1-2-wrapper">
+      <h2 class="heading1" data-en="2 Gbps"><span>①-2&emsp;2 Gbps</span></h2>
+     <div class="area1-2-upper">
+       <ol class="list_design1">
+        <li>テキスト⑱：テキストテキストテキスト</li>
+        <li>テキスト⑲：テキストテキストテキスト</li>
+        <li>テキスト⑳：テキストテキストテキスト</li>
+       </ol>
+       <div class="area1-2-gbps1">
+         <img src="image/hikari-2gbps2.png" alt="" class="area1-2-gbps2">
+         <img src="image/kira3.png" alt="" class="kira1">
+         <img src="image/kira4.png" alt="" class="kira2">
+         <img src="image/kira6.png" alt="" class="kira3">
+         <img src="image/kira4.png" alt="" class="kira4">
+         <div class="circle"></div>
+         <div class="gbps-text">テキスト㉓</div>
+       </div>
+       <img src="image/mokumoku.png" alt="" class="mokumoku">
+       <div class="point">テキスト⑰</div>
+     </div> 
+      <div class="area1-2-textarea">
+        <span class="area1-2-textarea-title">テキスト㉑</span>
+        <p>テキスト㉒：テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+          <span id="emoji4"></span> テキストテキストテキストテキストテキストテキストテキストテキストテキスト⚡ 
+          テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+      </div>
+      <div class="video">
+        <iframe width="640" height="360" src="https://www.youtube.com/embed/IA2D3Cl03CU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+    </div>
+  </section>
+
   <section id="area2">
     <div class="area2-wrapper">
-      <h2 class="heading1" data-en="Wi-Fi"><span>① พ็อกเก็ตพกพา200GB</span></h2>
+      <h2 class="heading1" data-en="Wi-Fi"><span>② ポケット Wi-fi 200GB</span></h2>
      <div class="area2-upper">
        <ol class="list_design1">
-         <li>เน็ต200GBเยอะที่สุดที่มีบริการในญี่ปุ่นปัจจุบัน</li>
-         <li>รุ่นใหม่ล่าสุดที่มีในญี่ปุ่นปัจจุบันเครื่องใหม่มือ1เปิดศูนย์</li>
-         <li>เน็ตเเรงและใช้ดีที่สุดที่มีในญี่ปุ่นปัจจุบัน</li>
+         <li>テキスト㉕：テキストテキストテキストテキスト</li>
+         <li>テキスト㉖：テキストテキストテキストテキスト</li>
+         <li>テキスト㉗：テキストテキストテキストテキスト</li>
        </ol>
        <div class="area2-wifi1">
          <img src="image/cloud wifi.png" alt="" class="area2-wifi2">
@@ -200,7 +274,7 @@
          <div class="wifi-text">พ็อกเก็ตพกพา200GB</div>
        </div>
        <img src="image/mokumoku.png" alt="" class="mokumoku">
-       <div class="point">จุดเด่นของรุ่นนี้คือ</div>
+       <div class="point">テキスト㉔</div>
        <img src="image/wifi-customer.jpeg" alt="" class="wifi-customer">
        <img class="fukidashi1" src="image/pop1.png" alt="">
        <p class="customer-text">ถูกใจใช้ดีที่สุดค่ะ!!</p>
@@ -362,14 +436,14 @@
       <img class="logo-delivery" src="image/logo-delivery.png" alt="">
       <h2><span class="line">ส่งของถึงมือลูกค้าอย่างปลอดภัย<br>ทั่วประเทศ</span></h2>
       <ul class="follow-me">
-        <li><a class="line-btn" href="https://line.me/ti/p/Am0F1OOwwQ"><span>&emsp;เพจ wifi shop thai</span></a></li>
-        <li><a class="tel-btn" href="tel:070-4200-9903">&emsp;tel：0 7 0 - 4 2 0 0 - 9 9 0 3</a></li>
+        <li><a class="what-btn" href="https://wa.me/qr/NYXYDLZYQQ3UH1"><span>&emsp;WhatsApp：0 9 0 - 4 0 7 4 - 5 3 3 7</span></a></li>
+        <li><a class="tel-btn" href="tel:090-4074-5337">&emsp;TEL：0 9 0 - 4 0 7 4 - 5 3 3 7</a></li>
       </ul>
     </div>
 
     <div class="container">
       <header>
-        <h1>เส้นทางติดต่อเพจ</h1>
+        <h1>テキストテキスト</h1>
       </header>
       <div class="container-area">
         <ul class="accordion">
@@ -383,12 +457,12 @@
             </div>
           </li>
           <li class="tab">
-            <div class="social line">
+            <div class="social what">
               <a href="https://line.me/ti/p/Am0F1OOwwQ" target="_blank">Line</a>
             </div>
             <div class="content">
-              <h1>Line</h1>
-              <p>Follow me on Line</p>
+              <h1>WhatsApp</h1>
+              <p>Follow me on WhatsApp</p>
             </div>
           </li>
           <li class="tab">
