--- a/index.html
+++ b/index.html
@@ -271,19 +271,19 @@
         <img src="image/kira6.png" alt="" class="kira3">
         <img src="image/kira4.png" alt="" class="kira4">
          <div class="circle"></div>
-         <div class="wifi-text">พ็อกเก็ตพกพา200GB</div>
+         <div class="wifi-text">テキスト㉚</div>
        </div>
        <img src="image/mokumoku.png" alt="" class="mokumoku">
        <div class="point">テキスト㉔</div>
-       <img src="image/wifi-customer.jpeg" alt="" class="wifi-customer">
+       <!-- <img src="image/wifi-customer.jpeg" alt="" class="wifi-customer">
        <img class="fukidashi1" src="image/pop1.png" alt="">
-       <p class="customer-text">ถูกใจใช้ดีที่สุดค่ะ!!</p>
+       <p class="customer-text">ถูกใจใช้ดีที่สุดค่ะ!!</p> -->
      </div> 
       <div class="area2-textarea">
-        <span class="area2-textarea-title">รายละเอียดเพิ่มเติม</span>
-        <p>พ็อกเก็ตพกพาใหม่ล่าสุด วิวัฒนากรรมใหม่เทคโนโลยีใหม่ ของพ็อกเก็ตwifi รุ่นนี้ใช้คลื่นทุกบริษัทได้!!!โดยเฉพาะคลื่นศูนย์ใหญ่DoCoMo au softbank ได้ทั้งหมด
-          <span id="emoji4"></span> ตัวเครื่องมันจะเปลี่ยนใช้คลื่นที่ดีที่สุด ณ.จุดที่คุณเปิดใช้งานอัตโนมัติ⚡ 
-          จบปัญหาที่ใช้คลื่นของศูนย์นั่นนี้ไม่ได้ จบที่เครื่องนี้เลยครับ</p>
+        <span class="area2-textarea-title">テキスト㉘</span>
+        <p>テキスト㉙：テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト
+          <span id="emoji4"></span> テキストテキストテキストテキストテキストテキストテキストテキストテキスト⚡ 
+          テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
       </div>
       <div class="video">
         <iframe width="640" height="360" src="https://www.youtube.com/embed/IA2D3Cl03CU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -293,43 +293,41 @@
 
   <section id="area3">
     <div class="area3-upper">
-      <h2 class="heading2" data-en="Tel Sim"><span>② ซิมเบอร์โทรระบบโทรไม่อั้นพร้อมเน็ตของdocomo</span></h2>
+      <h2 class="heading2" data-en="Tel Sim"><span>③ SIM カード</span></h2>
       <div class="area3-content">
-        <h3>3GB/6GB/12GB+เบอร์โทรระบบโทรไม่อั้น</h3>
+        <h3>3GB/6GB/12GB</h3>
         <ol class="list_design1">
-          <li>เบอร์โทรระบบโทรไม่อั้นเบอร์ในประเทศ</li>
-          <li>ไม่มีสัญญาผูกมัดใดๆในการใช้บริการ</li>
-          <li>คลื่นสัญญาณทั่วถึงใช้ได้ทุกจุดพื้นที่ในญี่ปุ่น</li>
+          <li>テキスト㉜：テキストテキストテキスト</li>
+          <li>テキスト㉝：テキストテキストテキスト</li>
+          <li>テキスト㉞：テキストテキストテキスト</li>
         </ol>
         <div class="area3-textarea1">
-          <span class="area3-textarea-title">รายละเอียดเพิ่มเติม</span>
-          <p>ซิมเบอร์โทรพร้อมเน็ตเบอร์ระบบโทรไม่อั้นเบอร์ในประเทศ<br>
-            📌เปิดบริการครั้งแรกเก็บเงินปลายทาง 6600¥<br>เน็ต3GB รายเดือน 3980¥<br>
-            เน็ต6GB รายเดือน 4980¥<br>
-            เน็ต12GB รายเดือน 6980¥<br><span id="emoji5"></span>ระวังการโทรปลายสายที่แจ้งว่า
-            ไม่ได้อยู่ในการโทรฟรี!!!
-             ปลายสายนี้ต้องเสียค่าใช้บริการนาทีละเท่านั้นเท่านี้ มันจะแจ้งเตือนเราก่อน!
-            และ
-            อีกอย่างคือการใช้SMSก็ไม่ฟรีนะครับ </p>
+          <span class="area3-textarea-title">テキスト㉟</span>
+          <p>テキスト㊱：テキストテキストテキストテキストテキスト<br>
+            📌テキストテキストテキストテキスト<br>テキストテキストテキストテキスト<br>
+            テキスト<br><span id="emoji5"></span>テキストテキストテキスト
+            テキストテキストテキスト
+            テキストテキストテキストテキストテキストテキスト
+            テキストテキストテキストテキストテキスト </p>
         </div>
       </div>
       <img src="image/mokumoku.png" alt="" class="mokumoku1">
-      <div class="recommend1">โทรศัพท์ไม่อันนี้</div>
+      <div class="recommend1">テキスト㉛</div>
       <img src="image/sim card.png" alt="" class="area3-image1">
       <img src="image/kira3.png" alt="" class="kira1">
       <img src="image/kira4.png" alt="" class="kira2">
       <img src="image/kira6.png" alt="" class="kira3">
       <div class="circle1"></div>
-      <div class="sim-text1">ซิมเบอร์โทรพร้อมเน็ต20GB</div>
+      <div class="sim-text1">テキスト㊲</div>
     </div>
     <p class="border1"> </p>
     <div class="area3-lower">
       <div class="area3-content">
-        <h3>ซิมเบอร์โทรฟรี1ชั่งโมงพร้อมเน็ต20GB docomo</h3>
+        <h3>3GB / 20GB</h3>
         <ol class="list_design1 list_design2">
-          <li>ซิมเบอร์โทรฟรี1ชั่วโมงพร้อมเน็ต20GB<br>สำหรับลูกค้าที่ไม่ใช้การโทรเบอร์เยอะ!!<br>แนะนำครับรายเดือนถูกๆ</li>
-          <li>ไม่มีสัญญาผูกมัดใดๆในการใช้บริการ</li>
-          <li>คลื่นสัญญาณทั่วถึงใช้ได้ทุกจุดพื้นที่ในญี่ปุ่น</li>
+          <li>テキスト㊴：テキストテキストテキスト</li>
+          <li>テキスト㊵：テキストテキストテキスト</li>
+          <li>テキスト㊶：テキストテキストテキスト</li>
         </ol>
       </div>
       <div class="video1">
@@ -339,25 +337,25 @@
         <iframe width="440" height="280" src="https://www.youtube.com/embed/z6cQA06MDig" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <img src="image/mokumoku.png" alt="" class="mokumoku2">
-      <div class="recommend2">สำหรับคนที่ไม่โทร<br>เบอร์ตรงเยอะ</div>
+      <div class="recommend2">テキスト㊳</div>
     </div>
   </section>
 
   <section id="area4">
     <div class="area4-upper">
-      <h2 class="heading3" data-en="Data Sim"><span>③ ซิมเน็ตอย่างเดียว50GB/100GB softbank </span></h2>
+      <h2 class="heading3" data-en="Data Sim"><span>④ 50GB / 100GB データ </span></h2>
       <div class="area4-content">
         <ol class="list_design1">
-          <li>ซิมเน็ตอย่างเดียว50GB/100GBของsoftbank</li>
-          <li>ไม่มีสัญญาผูกมัดใดๆในการใช้บริการ</li>
-          <li>ไม่ต้องใช้หลักฐานวีซ่าใดๆ ใช้แค่ชื่อนามสกุล และ<br>ที่อยู่ส่งของ มาทำเรื่องได้เลย</li>
+          <li>テキスト㊸：テキストテキストテキスト</li>
+          <li>テキスト㊹：テキストテキストテキスト</li>
+          <li>テキスト㊺：テキストテキストテキスト</li>
         </ol>
         <div class="area4-textarea">
-          <span class="area4-textarea-title">รายละเอียดเพิ่มเติม</span>
-          <p>โทรศัพท์ที่ใช้กับซิมได้<br>จำเป็นต้อง เป็นโทรศัพท์ที่ไม่ติดศูนย์ ไม่ติดผ่อน เป็นโทรศัพท์sim free (ไม่ล็อกซิม)เท่านั้นนะครับ
+          <span class="area4-textarea-title">テキスト㊻</span>
+          <p>テキスト㊼：テキストテキストテキストテキスト<br>テキストテキストテキスト
             <span id="emoji6"></span><br>
-            📌จัดการตั้งค่า APNใช้เอง ตามสะดวกได้เลย ทางเราไม่รับผิดชอบช่วยเหลือ การตั้งค่าใดๆ 
-            มีแค่ตัวอย่าง เป็นคลิปให้ดู เป็นตัวอย่างเท่านั้น<span id="emoji6"></span>
+            📌テキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキストテキスト 
+            テキストテキストテキストテキストテキストテキスト<span id="emoji6"></span>
           </p>
         </div>
       </div>
@@ -365,12 +363,12 @@
         <iframe width="440" height="280" src="https://www.youtube.com/embed/f36nRjYChMk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <img src="image/mokumoku.png" alt="" class="mokumoku3">
-      <div class="recommend3">เน็ตอย่างตามต้องการ</div>
+      <div class="recommend3">テキスト㊷</div>
       <img src="image/sim card.png" alt="" class="area3-image1">
       <img src="image/kira3.png" alt="" class="kira1">
       <img src="image/kira4.png" alt="" class="kira2">
       <div class="circle3"></div>
-      <div class="sim-text3">ซิมเน็ตอย่างเดียว</div>
+      <div class="sim-text3">テキスト㊽</div>
     </div>
   </section>
 
@@ -477,6 +475,15 @@
           <li class="tab">
             <div class="social facebook">
               <a href="https://www.facebook.com/WIFISHOP.THAI/" target="_blank">Facebook</a>
+            </div>
+            <div class="content">
+              <h1>Facebook</h1>
+              <p>Follow me on Facebook</p>
+            </div>
+          </li>
+          <li class="tab">
+            <div class="social facebook">
+              <a href="#" target="_blank"><img src="image/googlemap2.png" alt=""></a>
             </div>
             <div class="content">
               <h1>Facebook</h1>
