--- a/index.html
+++ b/index.html
@@ -200,7 +200,8 @@
          <div class="wifi-text">テキスト⑮</div>
        </div>
        <div class="area1-1-gbps1">
-         <img src="image/hikari-2gbps1.png" alt="" class="area1-1-gbps2">
+         <img src="image/modem.png" alt="" class="area1-1-gbps2">
+         <img src="image/rooter.png" alt="" class="area1-1-gbps2 area1-1-gbps3">
          <img src="image/kira3.png" alt="" class="kira1">
          <img src="image/kira4.png" alt="" class="kira2">
          <img src="image/kira4.png" alt="" class="kira3">
@@ -232,7 +233,7 @@
         <li>テキスト⑳：テキストテキストテキスト</li>
        </ol>
        <div class="area1-2-gbps1">
-         <img src="image/hikari-2gbps2.png" alt="" class="area1-2-gbps2">
+         <img src="image/hikari-2gbps1.png" alt="" class="area1-2-gbps2">
          <img src="image/kira3.png" alt="" class="kira1">
          <img src="image/kira4.png" alt="" class="kira2">
          <img src="image/kira6.png" alt="" class="kira3">
@@ -374,65 +375,43 @@
 
   <section id="area5">
     <div class="area5-upper">
-      <h2 class="heading3" data-en="Fiber"><span>④ เน็ตบ้านความเร็ว1000mbps</span></h2>
-      <ol class="list_design1">
-        <li>เน็ตบ้านเน็ตร้านเน็ตอพาร์ตเมนต์<br>ความเร็วสูงสุด1000mbps</li>
-        <li>เพจเราเป็นตัวแทนทำเรื่องให้ลูกค้าทุกอย่างรับผิ<br>ดชอบทำถึงจุดที่ติดตั้งลูกค้าใช้งานเน็ตได้เลย!!</li>
-        <li>ลูกค้าสะดวกสบายปลอดภัย!!และแถมโปรโมชั่นใ<br>ห้เล้าเตอร์ขยายwifiตั้งค่าให้พร้อมใช้เลยฟรี!!!</li>
-      </ol>
+      <h2 class="heading3" data-en="Smart phone"><span>⑤ 中古携帯電話販売</span></h2>
       <div class="area5-content">
         <div class="area5-textarea">
-          <span class="area5-textarea-title">รายละเอียดเพิ่มเติม</span>
+          <span class="area5-textarea-title">テキスト㊾</span>
           <p>
-            📌รายละเอียดรายเดือน รายเดือน (สำหรับที่อยู่อพาร์ต)<br>
-            •ค่าบริการเน็ตรายเดือน3800¥<br>
-            •ค่าติดตั้งสายเน็ตเดือน400¥(ผ่อน60ครั้ง)<br>
-            ตรงนี้สามารถปรับเปลี่ยนได้ตามความสะดวกของลูกค้า(ราคาที่ลงไว้คือราคาที่ต่ำที่สุดที่จะผ่อนได้)<br>
-            •ค่าทำใบบิลเก็บค่าบริการ300¥<br>
-            •ภาษี10%<br>
-            3800+400+300=4500+10%=4950¥{4950¥ต่อเดือน}<br>
-            📌รายเดือน(แบบร้านหรือบ้านส่วนตัวหลังเดี่ยว)<br>
-            •ค่าบริการเน็ตรายเดือน5200¥<br>
-            •ค่าติดตั้งสายเน็ตเดือน400¥(ผ่อน60ครั้ง)<br>
-            ตรงนี้สามารถปรับเปลี่ยนได้ตามความสะดวกของลูกค้า ราคาที่ลงไว้คือราคาที่ต่ำที่สุดที่จะผ่อนได้<br>
-            •ค่าทำใบบิลเก็บค่าบริการ300¥<br>
-            •ภาษี10%<br>
-            5200+400+300=5900+10%=6490¥{6490¥ต่อเดือน}<br>
-            📌ค่าว่าจ้างพนักงานติดตั้ง<br>
-            จันทร์-ศุกร์ 3000¥รวมภาษีเรียบร้อย<br>
-            ถ้าเลือกเสาร์อาทิตย์ ราคาจะเพิ่มเป็น 6000¥<br>
-            📌สัญญาเน็ต2ปีต่ออัตโนมัติ<br>
-            <span id="emoji7"></span>เวลายกเลิกการใช้งาน ต้องยกเลิกช่วงต่อสัญญาทุกๆ2ปี ถึงจะไม่เสียค่าปรับนะครับ<br>
-            ถ้ายกเลิกนอกเหนือจากนั้น จะมีค่าธรรมเนียมการยกเลิกสัญญา 10450円 ตรงนี้ต้องจำให้ดีนะครับ<span id="emoji8"></span>
+            📌テキスト㊿：テキストテキストテキストテキストテキストテキストテキスト<br>
+            テキストテキストテキストテキストテキストテキストテキストテキスト<br>
+            テキストテキストテキストテキストテキストテキストテキストテキストテキスト<br>
+            <span id="emoji7"></span>テキストテキストテキストテキストテキストテキストテキストテキスト<br>
+            テキストテキストテキストテキストテキストテキストテキストテキスト<span id="emoji8"></span>
           </p>
         </div>
       </div>
-      <div class="video">
-        <iframe width="440" height="280" src="https://www.youtube.com/embed/OlBIgXGp3aM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-      <img src="image/mokumoku.png" alt="" class="mokumoku3">
-      <div class="recommend3">เน็ตใช้ไม่อั้น<br>Unlimitedหนึ่งเดียว</div>
-      <img src="image/modem.png" alt="" class="area5-image1">
-      <img src="image/rooter.png" alt="" class="area5-image2">
+      <!-- <img src="image/mokumoku.png" alt="" class="mokumoku3">
+      <div class="recommend3">テキストテキスト</div> -->
+      <img src="image/iphone.png" alt="" class="area5-image1">
+      <!-- <img src="image/rooter.png" alt="" class="area5-image2"> -->
       <img src="image/kira3.png" alt="" class="kira1">
       <img src="image/kira4.png" alt="" class="kira2">
       <img src="image/kira4.png" alt="" class="kira3">
       <div class="circle3"></div>
-      <div class="sim-text3">เน็ตบ้าน1000mbps</div>
+      <div class="sim-text3">テキスト51</div>
     </div>
     <div class="area5-lower">
-      <div class="frame1"><img src="image/map.png" alt="" class="map-back"></div>
-      <!-- <div class="frame1"><img src="image/blue-back.jpg" alt="" class="map-back"></div>
-      <img src="image/delivery-map.png" alt="" class="japan-map">
-      <img src="image/arrow2.png" alt="" class="arrow1">
-      <img src="image/arrow2.png" alt="" class="arrow2">
-      <img src="image/arrow3.png" alt="" class="arrow3">
-      <img src="image/arrow1.png" alt="" class="arrow4"> -->
+      <section class="map">
+        <div class="map-content">
+          <h1>テキスト52：テキスト</h1>
+          <h2>テキスト53：テキストテキストテキストテキスト<br>
+            テキストテキストテキストテキストテキスト<br>
+            テキストテキストテキストテキストテキストテキストテキスト</h2>
+        </div>
+      </section>
       <img class="sagawa1" src="image/sagawa-track.png" alt="">
       <img class="sagawa2" src="image/sagawa-staff.png" alt="">
+      <img class="japan-map" src="image/delivery-map2.png" alt="">
       <!-- <img class="logo-delivery" src="image/logo-upper-white.png" alt=""> -->
       <img class="logo-delivery" src="image/logo-delivery.png" alt="">
-      <h2><span class="line">ส่งของถึงมือลูกค้าอย่างปลอดภัย<br>ทั่วประเทศ</span></h2>
       <ul class="follow-me">
         <li><a class="what-btn" href="https://wa.me/qr/NYXYDLZYQQ3UH1"><span>&emsp;WhatsApp：0 9 0 - 4 0 7 4 - 5 3 3 7</span></a></li>
         <li><a class="tel-btn" href="tel:090-4074-5337">&emsp;TEL：0 9 0 - 4 0 7 4 - 5 3 3 7</a></li>
@@ -441,13 +420,13 @@
 
     <div class="container">
       <header>
-        <h1>テキストテキスト</h1>
+        <h1>テキスト54：テキスト</h1>
       </header>
       <div class="container-area">
         <ul class="accordion">
             <li class="tab">
               <div class="social youtube">
-                <a href="https://www.youtube.com/channel/UCtduXsRhwkkDh7H0TROSPpw" target="_blank">Youtube</a>
+                <a href="https://www.youtube.com/channel/UCNVHkOnWrbEVfFo5hkOBR4A" target="_blank">Youtube</a>
               </div>
             <div class="content">
               <h1>Youtube</h1>
@@ -456,7 +435,7 @@
           </li>
           <li class="tab">
             <div class="social what">
-              <a href="https://line.me/ti/p/Am0F1OOwwQ" target="_blank">Line</a>
+              <a href="https://wa.me/qr/NYXYDLZYQQ3UH1" target="_blank">Line</a>
             </div>
             <div class="content">
               <h1>WhatsApp</h1>
@@ -465,7 +444,7 @@
           </li>
           <li class="tab">
             <div class="social tiktok">
-              <a href="https://www.tiktok.com/@wifishopthai?" target="_blank">Tiktok</a>
+              <a href="https://vt.tiktok.com/ZSeFtvAJj/" target="_blank">Tiktok</a>
             </div>
             <div class="content">
               <h1>Tiktok</h1>
@@ -474,7 +453,7 @@
           </li>
           <li class="tab">
             <div class="social facebook">
-              <a href="https://www.facebook.com/WIFISHOP.THAI/" target="_blank">Facebook</a>
+              <a href="https://www.facebook.com/WiFiSHOP.Espanol" target="_blank">Facebook</a>
             </div>
             <div class="content">
               <h1>Facebook</h1>
@@ -483,7 +462,7 @@
           </li>
           <li class="tab">
             <div class="social facebook">
-              <a href="#" target="_blank"><img src="image/googlemap2.png" alt=""></a>
+              <a href="https://goo.gl/maps/Bimegxeo8YNynuCM8" target="_blank"><img src="image/googlemap2.png" alt=""></a>
             </div>
             <div class="content">
               <h1>Facebook</h1>
