--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="profile-text">
         テキスト①：テキストテキストテキスト<span id="emoji1"></span><span id="emoji2"></span><span id="emoji3"></span><br>
       </div>
-      <img src="image/staff1-1.png" alt="" class="profile profile1">
+      <!-- <img src="image/staff1-1.png" alt="" class="profile profile1"> -->
       <img src="image/staff2-2.png" alt="" class="profile profile2">
     </div>
     <div class="video">
@@ -97,8 +97,9 @@
             <img class="area1-image1" src="image/list.png" alt="">
             <p>01</p>
           </div>
-          <img class="area1-image2" src="image/hikari-2gbps2.png" alt="">
-          <img class="area1-image2 area1-image2-1" src="image/hikari-2gbps1.png" alt="">
+          <img class="area1-image2" src="image/modem.png" alt="">
+          <img class="area1-image2 area1-image2-1" src="image/rooter.png" alt="">
+          <img class="area1-image2 area1-image2-2" src="image/hikari-2gbps1.png" alt="">
           <div>
             <div class="intro-text1"><span class="text1-title">★ 1 Gbps</span><br><span class="text-line1"><span class="GB1 GB2">テキスト②</span> </span>&nbsp; <span class="price1">4,950￥</span> (毎月税込み)</div>
             <div class="intro-text1"><span class="text1-title">★ 2 Gbps</span><br><span class="text-line1"><span class="GB1 GB2">テキスト③</span> </span>&nbsp; <span class="price1">5,200￥</span> (毎月税込み)</div>
@@ -135,6 +136,7 @@
             <p>05</p>
           </div>
           <img class="area1-image5" src="image/iphone.png" alt="">
+          <img class="area1-image5 area1-image6" src="image/android.png" alt="">
           <div class="intro-text1 intro-text3"><span class="text1-title">テキスト⑥</span><br> <span class="price1">4,950￥</span>(毎月税込み)</div>
         </ul>
       </div>
@@ -146,27 +148,27 @@
 
     <div class="customer-wrapper">
       <div class="customer slick-srider">
-        <img class="customer1" src="image/shopout-s1.jpeg" alt="">
-        <img class="customer1" src="image/customer1.jpeg" alt="">
-        <img class="customer1" src="image/customer2.jpeg" alt="">
-        <img class="customer1" src="image/customer3.jpeg" alt="">
-        <img class="customer1" src="image/shopin-s1.jpeg" alt="">
-        <img class="customer1" src="image/customer4.jpeg" alt="">
-        <img class="customer1" src="image/customer6.jpeg" alt="">
-        <img class="customer1" src="image/shop-in3.jpeg" alt="">
-        <img class="customer1" src="image/customer8.jpeg" alt="">
-        <img class="customer1" src="image/customer9.jpeg" alt="">
-        <img class="customer1" src="image/shop-in2.jpeg" alt="">
-        <img class="customer1" src="image/customer16.jpeg" alt="">
-        <img class="customer1" src="image/customer17.jpeg" alt="">
-        <img class="customer1" src="image/customer18.jpeg" alt="">
-        <img class="customer1" src="image/shopout-s1.jpeg" alt="">
-        <img class="customer1" src="image/customer19.jpeg" alt="">
-        <img class="customer1" src="image/customer20.jpeg" alt="">
-        <img class="customer1" src="image/shopin-s1.jpeg" alt="">
-        <img class="customer1" src="image/customer21.jpeg" alt="">
-        <img class="customer1" src="image/customer22.jpeg" alt="">
-        <img class="customer1" src="image/customer23.jpeg" alt="">
+        <div><img class="customer1" src="image/shopout-s1.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/customer1.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/customer2.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/customer3.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/shopin-s1.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/customer4.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/customer6.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/shop-in3.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/customer8.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/customer9.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/shop-in2.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/customer16.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/customer17.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/customer18.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/shopout-s1.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/customer19.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/customer20.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/shopin-s1.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/customer21.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/customer22.jpeg" alt=""></div>
+        <div><img class="customer1" src="image/customer23.jpeg" alt=""></div>
       </div>
       <img class="fukidashi1" src="image/pop1.png" alt="">
       <p class="customer-text">テキスト⑦</p>
@@ -391,7 +393,7 @@
       <!-- <img src="image/mokumoku.png" alt="" class="mokumoku3">
       <div class="recommend3">テキストテキスト</div> -->
       <img src="image/iphone.png" alt="" class="area5-image1">
-      <!-- <img src="image/rooter.png" alt="" class="area5-image2"> -->
+      <img src="image/android.png" alt="" class="area5-image1 area5-image2">
       <img src="image/kira3.png" alt="" class="kira1">
       <img src="image/kira4.png" alt="" class="kira2">
       <img src="image/kira4.png" alt="" class="kira3">
@@ -408,7 +410,7 @@
         </div>
       </section>
       <img class="sagawa1" src="image/sagawa-track.png" alt="">
-      <img class="sagawa2" src="image/sagawa-staff.png" alt="">
+      <!-- <img class="sagawa2" src="image/sagawa-staff.png" alt=""> -->
       <img class="japan-map" src="image/delivery-map2.png" alt="">
       <!-- <img class="logo-delivery" src="image/logo-upper-white.png" alt=""> -->
       <img class="logo-delivery" src="image/logo-delivery.png" alt="">
