--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
             <p>02</p>
           </div>
           <img class="area1-image10" src="image/cloud wifi.png" alt="">
-          <div class="intro-text1"><span class="text1-title">ポケット Wi-fi</span><br><span class="text-line2"><span class="GB1 GB2">200</span> GB</span><br> <span class="price1">6,000￥</span> (毎月税込み)</div>
+          <img class="area1-image10 area1-image11" src="image/wifi2.png" alt="">
+          <div class="intro-text1"><span class="text1-title">ポケット Wi-fi</span><br><span class="text-line2"><span class="GB1 GB2">200</span> GB</span>/<span class="text-line2"><span class="GB1 GB2">100</span> GB</span><br> <span class="price1">6,000￥</span> (毎月税込み)</div>
         </ul>
         <ul class="introduce-content">
           <div class="area1-list">
@@ -198,7 +199,7 @@
          <img src="image/kira6.png" alt="" class="kira3">
          <img src="image/kira4.png" alt="" class="kira4">
          <div class="circle"></div>
-         <div class="wifi-text">テキスト⑮</div>
+         <!-- <div class="wifi-text">テキスト⑮</div> -->
        </div>
        <div class="area1-1-gbps1">
          <img src="image/modem.png" alt="" class="area1-1-gbps2">
@@ -259,7 +260,7 @@
 
   <section id="area2">
     <div class="area2-wrapper">
-      <h2 class="heading1" data-en="Wi-Fi"><span>② ポケット Wi-fi 200GB</span></h2>
+      <h2 class="heading1" data-en="Wi-Fi"><span>② ポケット Wi-fi 200GB/100GB</span></h2>
      <div class="area2-upper">
        <ol class="list_design1">
          <li>テキスト㉕：テキストテキストテキストテキスト</li>
@@ -268,6 +269,7 @@
        </ol>
        <div class="area2-wifi1">
          <img src="image/cloud wifi.png" alt="" class="area2-wifi2">
+         <img src="image/wifi2.png" alt="" class="area2-wifi2 area2-wifi3">
          <img src="image/kira3.png" alt="" class="kira1">
         <img src="image/kira4.png" alt="" class="kira2">
         <img src="image/kira6.png" alt="" class="kira3">
@@ -409,7 +411,8 @@
         </div>
       </section>
       <img class="sagawa1" src="image/sagawa-track.png" alt="">
-      <!-- <img class="sagawa2" src="image/sagawa-staff.png" alt=""> -->
+      <img class="sagawa2" src="image/futo.png" alt="">
+      <div class="packing">Packing</div>
       <img class="japan-map" src="image/delivery-map2.png" alt="">
       <!-- <img class="logo-delivery" src="image/logo-upper-white.png" alt=""> -->
       <img class="logo-delivery" src="image/logo-delivery.png" alt="">
