--- a/index.html
+++ b/index.html
@@ -193,12 +193,12 @@
          <li>テキスト⑫：テキストテキストテキスト</li>
        </ol>
        <div class="area1-1-wifi1">
-         <img src="image/cloud wifi.png" alt="" class="area1-1-wifi2">
+         <!-- <img src="image/cloud wifi.png" alt="" class="area1-1-wifi2">
          <img src="image/kira3.png" alt="" class="kira1">
          <img src="image/kira4.png" alt="" class="kira2">
          <img src="image/kira6.png" alt="" class="kira3">
          <img src="image/kira4.png" alt="" class="kira4">
-         <div class="circle"></div>
+         <div class="circle"></div> -->
          <!-- <div class="wifi-text">テキスト⑮</div> -->
        </div>
        <div class="area1-1-gbps1">
