--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </ul> -->
     <div class="profile-area">
       <div class="profile-text">
-        テキスト①：テキストテキストテキスト<span id="emoji1"></span><span id="emoji2"></span><span id="emoji3"></span><br>
+        テキスト①：テキストテキストテキストテキスト<span id="emoji1"></span><span id="emoji2"></span><span id="emoji3"></span><br>
       </div>
       <!-- <img src="image/staff1-1.png" alt="" class="profile profile1"> -->
       <img src="image/staff2-2.png" alt="" class="profile profile2">
@@ -185,7 +185,8 @@
 
   <section id="area1-1">
     <div class="area1-1-wrapper">
-      <h2 class="heading1" data-en="1 Gbps"><span>①-1&emsp;1 Gbps</span></h2>
+      <!-- <h2 class="heading1" data-en="1 Gbps"><span>①-1&emsp;1 Gbps</span></h2> -->
+      <h2 class="heading1"><span>①-1&emsp;1 Gbps</span></h2>
      <div class="area1-1-upper">
        <ol class="list_design1">
          <li>テキスト⑩：テキストテキストテキスト</li>
@@ -227,7 +228,7 @@
 
   <section id="area1-2">
     <div class="area1-2-wrapper">
-      <h2 class="heading1" data-en="2 Gbps"><span>①-2&emsp;2 Gbps</span></h2>
+      <h2 class="heading1"><span>①-2&emsp;2 Gbps</span></h2>
      <div class="area1-2-upper">
        <ol class="list_design1">
         <li>テキスト⑱：テキストテキストテキスト</li>
@@ -260,7 +261,7 @@
 
   <section id="area2">
     <div class="area2-wrapper">
-      <h2 class="heading1" data-en="Wi-Fi"><span>② ポケット Wi-fi 200GB/100GB</span></h2>
+      <h2 class="heading1"><span>② ポケット Wi-fi 200GB/100GB</span></h2>
      <div class="area2-upper">
        <ol class="list_design1">
          <li>テキスト㉕：テキストテキストテキストテキスト</li>
@@ -297,7 +298,7 @@
 
   <section id="area3">
     <div class="area3-upper">
-      <h2 class="heading2" data-en="Tel Sim"><span>③ SIM カード</span></h2>
+      <h2 class="heading2"><span>③ SIM カード</span></h2>
       <div class="area3-content">
         <h3>3GB/6GB/12GB</h3>
         <ol class="list_design1">
@@ -347,7 +348,7 @@
 
   <section id="area4">
     <div class="area4-upper">
-      <h2 class="heading3" data-en="Data Sim"><span>④ 50GB / 100GB データ </span></h2>
+      <h2 class="heading3"><span>④ 50GB / 100GB データ </span></h2>
       <div class="area4-content">
         <ol class="list_design1">
           <li>テキスト㊸：テキストテキストテキスト</li>
@@ -378,7 +379,7 @@
 
   <section id="area5">
     <div class="area5-upper">
-      <h2 class="heading3" data-en="Smart phone"><span>⑤ 中古携帯電話販売</span></h2>
+      <h2 class="heading3"><span>⑤ 中古携帯電話販売</span></h2>
       <div class="area5-content">
         <div class="area5-textarea">
           <span class="area5-textarea-title">テキスト㊾</span>
