--- a/index.html
+++ b/index.html
@@ -298,9 +298,9 @@
 
   <section id="area3">
     <div class="area3-upper">
-      <h2 class="heading2"><span>③ SIM カード</span></h2>
+      <h2 class="heading2"><span>③ SIM カード 3GB/6GB/12GB</span></h2>
       <div class="area3-content">
-        <h3>3GB/6GB/12GB</h3>
+        <!-- <h3>3GB/6GB/12GB</h3> -->
         <ol class="list_design1">
           <li>テキスト㉜：テキストテキストテキスト</li>
           <li>テキスト㉝：テキストテキストテキスト</li>
@@ -324,26 +324,11 @@
       <img src="image/kira6.png" alt="" class="kira3">
       <div class="circle1"></div>
       <div class="sim-text1">テキスト㊲</div>
-    </div>
-    <p class="border1"> </p>
-    <div class="area3-lower">
-      <div class="area3-content">
-        <h3>3GB / 20GB</h3>
-        <ol class="list_design1 list_design2">
-          <li>テキスト㊴：テキストテキストテキスト</li>
-          <li>テキスト㊵：テキストテキストテキスト</li>
-          <li>テキスト㊶：テキストテキストテキスト</li>
-        </ol>
-      </div>
       <div class="video1">
         <iframe width="440" height="280" src="https://www.youtube.com/embed/UIWGrkVk7-8" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <div class="video2">
-        <iframe width="440" height="280" src="https://www.youtube.com/embed/u72hVFNoSlg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
-      <img src="image/mokumoku.png" alt="" class="mokumoku2">
-      <div class="recommend2">テキスト㊳</div>
     </div>
+    <!-- <p class="border1"> </p> -->
   </section>
 
   <section id="area4">
